--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.5",
     "axios": "^1.7.9",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.47",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-moment": "^1.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
